# Sample-Code

./: main.cpp
RegressionTests/: RegressionLauncher.py  RunTest.py  VTUCompare  VTUCompare.cpp
RegressionTests/Tests/PoissonTri/datafile/: simulation
RegressionTests/Tests/PoissonTri/mesh/: Box.exo
RegressionTests/Tests/PoissonTri/results/COORDINATES/: conc_COORDINATES_interior_0.000000_out.pvtu  conc_COORDINATES_interior_1.000000_out.pvtu  conc_COORDINATES_time.pvd  solution_output_COORDINATES_interior_0_1.000000.vtu
RegressionTests/Tests/PoissonTri/results/ELEMENTGID/: conc_ELEMENTGID_interior_0.000000_out.pvtu  conc_ELEMENTGID_interior_1.000000_out.pvtu  conc_ELEMENTGID_time.pvd  solution_output_ELEMENTGID_interior_0_1.000000.vtu
RegressionTests/Tests/PoissonTri/results/NODEGID/: conc_NODEGID_interior_0.000000_out.pvtu  conc_NODEGID_interior_1.000000_out.pvtu  conc_NODEGID_time.pvd  solution_output_NODEGID_interior_0_1.000000.vtu
RegressionTests/Tests/PoissonTri/results/PROCESSORRANK/: conc_PROCESSORRANK_interior_0.000000_out.pvtu  conc_PROCESSORRANK_interior_1.000000_out.pvtu  conc_PROCESSORRANK_time.pvd  solution_output_PROCESSORRANK_interior_0_1.000000.vtu
RegressionTests/Tests/PoissonTri/results/u/: conc_u_interior_0.000000_out.pvtu  conc_u_interior_1.000000_out.pvtu  conc_u_time.pvd  solution_output_u_interior_0_0.000000.vtu  solution_output_u_interior_0_1.000000.vtu
RegressionTests/Tests/PoissonTri/subdatafiles/: datafile
src/: CMakeLists.txt
src/Mesh/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  MeshEnum.hpp
src/Mesh/Entity/: Bucket.hpp  CMakeLists.txt  Entity.cpp  Entity.hpp  EntityContainer.cpp  EntityContainer.hpp  EntityStats.cpp  EntityStats.hpp
src/Mesh/MeshPart/: BoundaryMeshPart.cpp  BoundaryMeshPart.hpp  CMakeLists.txt  InteriorMeshPart.cpp  InteriorMeshPart.hpp
src/Mesh/MeshQuery/: CMakeLists.txt  MeshQuery.cpp  MeshQuery.hpp  MeshQueryR0.cpp  MeshQueryR0.hpp  MeshQueryR2.cpp  MeshQueryR2.hpp
src/Mesh/MeshUtility/: CMakeLists.txt  EntityComInfo.cpp  EntityComInfo.hpp
src/Mesh/STKMesh/: CMakeLists.txt  STKMesh.cpp  STKMesh.hpp
src/NonlinearSolver/: CMakeLists.txt  NewtonSolver.cpp  NewtonSolver.hpp  NonlinearSolver.cpp  NonlinearSolver.hpp  NonlinearSolvers.cpp  NonlinearSolvers.hpp
src/Simulation/: CMakeLists.txt  Simulation.cpp  Simulation.hpp
src/Simulation/Problem/: Algorithm.cpp  Algorithm.hpp  CMakeLists.txt  Problem.cpp  Problem.hpp
src/Simulation/Problem/PDEProblem/: CMakeLists.txt  PDEProblem.cpp  PDEProblem.hpp
src/Simulation/Problem/PDEProblem/DiscretizeInTime/: CMakeLists.txt  DiscretizeInTime.cpp  DiscretizeInTime.hpp
src/Simulation/Problem/PDEProblem/PDEAlgorithms/: CMakeLists.txt
src/Simulation/Problem/PDEProblem/PDEAlgorithms/FiniteElement/: CMakeLists.txt  FEAlgorithm.cpp  FEAlgorithm.hpp  FEPrescribedConditionsHelper.cpp  FEPrescribedConditionsHelper.hpp  FESolutionToFieldDataHelper.cpp  FESolutionToFieldDataHelper.hpp
src/TimeDiscretization/: BDF1.hpp  CMakeLists.txt  Quasistatic.hpp  TimeDiscretization.hpp  TimeDiscretizationConcepts.hpp  TimeDiscretizationEnum.cpp  TimeDiscretizationEnum.hpp
